--- a/alpine-slim/SRC/html/index.html
+++ b/alpine-slim/SRC/html/index.html
@@ -6,7 +6,7 @@
         <h1>It works on my machine...</h1>
         <img src="hand.png" />
         <p>and works on every machine</p>
-        <p>and мине</p>
-        <p>и на моята</p>
+        <p>and on myne</p>
+        <p>not on myne machine</p>
     </body>
 </html>
